# cec

./: .gitattributes  .gitignore  ANNOUNCE-0.2  ANNOUNCE-0.3  ANNOUNCE-0.4  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  libtool  mkinstalldirs
.github/workflows/: codeql.yml
figures/: figAssignTranslation.eps  figExitTranslation.eps  figGRCTranslationInterface.eps  figLoopTranslation.eps  figNothingTranslation.eps  figParTranslation.eps  figPauseTranslation.eps  figSAssignTranslation.eps  figSeqTranslation.eps  figSimilarTranslationPatterns.eps  figSuspendTranslation.eps  figTestTranslation.eps  figTrapTranslation.eps
libantlr/: Makefile  Makefile.am  Makefile.in  README
libantlr/antlr/: ANTLRException.hpp  ANTLRUtil.hpp  AST.hpp  ASTArray.hpp  ASTFactory.hpp  ASTNULLType.hpp  ASTPair.hpp  ASTRefCount.hpp  BaseAST.hpp  BitSet.hpp  CharBuffer.hpp  CharInputBuffer.hpp  CharScanner.hpp  CharStreamException.hpp  CharStreamIOException.hpp  CircularQueue.hpp  CommonAST.hpp  CommonASTWithHiddenTokens.hpp  CommonHiddenStreamToken.hpp  CommonToken.hpp  IOException.hpp  InputBuffer.hpp  LLkParser.hpp  LexerSharedInputState.hpp  MismatchedCharException.hpp  MismatchedTokenException.hpp  NoViableAltException.hpp  NoViableAltForCharException.hpp  Parser.hpp  ParserSharedInputState.hpp  RecognitionException.hpp  RefCount.hpp  SemanticException.hpp  String.hpp  Token.hpp  TokenBuffer.hpp  TokenStream.hpp  TokenStreamBasicFilter.hpp  TokenStreamException.hpp  TokenStreamHiddenTokenFilter.hpp  (+7 more)
libantlr/src/: ANTLRUtil.cpp  ASTFactory.cpp  ASTNULLType.cpp  ASTRefCount.cpp  BaseAST.cpp  BitSet.cpp  CharBuffer.cpp  CharScanner.cpp  CommonAST.cpp  CommonASTWithHiddenTokens.cpp  CommonHiddenStreamToken.cpp  CommonToken.cpp  InputBuffer.cpp  LLkParser.cpp  MismatchedCharException.cpp  MismatchedTokenException.cpp  NoViableAltException.cpp  NoViableAltForCharException.cpp  Parser.cpp  RecognitionException.cpp  String.cpp  Token.cpp  TokenBuffer.cpp  TokenStreamBasicFilter.cpp  TokenStreamHiddenTokenFilter.cpp  TokenStreamSelector.cpp  TreeParser.cpp
src/: AST.cpp  AST.hpp  AST.nw  ASTGRC.cpp  ASTGRC.hpp  ASTGRC.nw  BLIF.cpp  BLIF.hpp  BLIF.nw  CPrinter.cpp  CPrinter.hpp  CPrinter.nw  Dismantle.cpp  Dismantle.hpp  Dismantle.nw  EsterelLexer.cpp  EsterelLexer.hpp  EsterelParser.cpp  EsterelParser.hpp  EsterelParser.html  EsterelPrinter.cpp  EsterelPrinter.hpp  EsterelPrinter.nw  EsterelTokenTypes.hpp  EsterelTokenTypes.txt  EsterelTreeParser.cpp  EsterelTreeParser.hpp  EsterelTreeParserTokenTypes.hpp  EsterelTreeParserTokenTypes.txt  ExpandModules.cpp  ExpandModules.hpp  ExpandModules.nw  GRCBAL.cpp  GRCBAL.hpp  GRCC2.cpp  GRCC2.hpp  GRCC2.nw  GRCOpt.cpp  GRCOpt.hpp  GRCOpt.nw  (+52 more)
tests/: Makefile  Makefile.in
