ACLOCAL_AMFLAGS = -I m4 --install

SUBDIRS = libantlr tests src

EXTRA_DIST = \
	figures/figAssignTranslation.eps \
	figures/figExitTranslation.eps \
	figures/figGRCTranslationInterface.eps \
	figures/figLoopTranslation.eps \
	figures/figNothingTranslation.eps \
	figures/figParTranslation.eps \
	figures/figPauseTranslation.eps \
	figures/figSAssignTranslation.eps \
	figures/figSeqTranslation.eps \
	figures/figSimilarTranslationPatterns.eps \
	figures/figSuspendTranslation.eps \
	figures/figTestTranslation.eps \
	figures/figTrapTranslation.eps \
	AUTHORS COPYING ChangeLog NEWS README TODO \
	ANNOUNCE-0.2 \
	ANNOUNCE-0.3 \
	ANNOUNCE-0.4
