noinst_LIBRARIES = libantlr.a

EXTRA_DIST = AUTHORS COPYING README

libantlr_a_SOURCES = \
	antlr/ANTLRException.hpp  \
	antlr/ANTLRUtil.hpp  \
	antlr/ASTArray.hpp  \
	antlr/ASTFactory.hpp  \
	antlr/AST.hpp  \
	antlr/ASTNULLType.hpp  \
	antlr/ASTPair.hpp  \
	antlr/ASTRefCount.hpp  \
	antlr/BaseAST.hpp  \
	antlr/BitSet.hpp  \
	antlr/CharBuffer.hpp  \
	antlr/CharInputBuffer.hpp  \
	antlr/CharScanner.hpp  \
	antlr/CharStreamException.hpp  \
	antlr/CharStreamIOException.hpp  \
	antlr/CircularQueue.hpp  \
	antlr/CommonAST.hpp  \
	antlr/CommonASTWithHiddenTokens.hpp  \
	antlr/CommonHiddenStreamToken.hpp  \
	antlr/CommonToken.hpp  \
	antlr/config.hpp  \
	antlr/InputBuffer.hpp  \
	antlr/IOException.hpp  \
	antlr/LexerSharedInputState.hpp  \
	antlr/LLkParser.hpp  \
	antlr/MismatchedCharException.hpp  \
	antlr/MismatchedTokenException.hpp  \
	antlr/NoViableAltException.hpp  \
	antlr/NoViableAltForCharException.hpp  \
	antlr/Parser.hpp  \
	antlr/ParserSharedInputState.hpp  \
	antlr/RecognitionException.hpp  \
	antlr/RefCount.hpp  \
	antlr/SemanticException.hpp  \
	antlr/String.hpp  \
	antlr/TokenBuffer.hpp  \
	antlr/Token.hpp  \
	antlr/TokenStreamBasicFilter.hpp  \
	antlr/TokenStreamException.hpp  \
	antlr/TokenStreamHiddenTokenFilter.hpp  \
	antlr/TokenStream.hpp  \
	antlr/TokenStreamIOException.hpp  \
	antlr/TokenStreamRecognitionException.hpp  \
	antlr/TokenStreamRetryException.hpp  \
	antlr/TokenStreamSelector.hpp  \
	antlr/TreeParser.hpp  \
	antlr/TreeParserSharedInputState.hpp  \
	src/ANTLRUtil.cpp  \
	src/ASTFactory.cpp  \
	src/ASTNULLType.cpp  \
	src/ASTRefCount.cpp  \
	src/BaseAST.cpp  \
	src/BitSet.cpp  \
	src/CharBuffer.cpp  \
	src/CharScanner.cpp  \
	src/CommonAST.cpp  \
	src/CommonASTWithHiddenTokens.cpp  \
	src/CommonHiddenStreamToken.cpp  \
	src/CommonToken.cpp  \
	src/InputBuffer.cpp  \
	src/LLkParser.cpp  \
	src/MismatchedCharException.cpp  \
	src/MismatchedTokenException.cpp  \
	src/NoViableAltException.cpp  \
	src/NoViableAltForCharException.cpp  \
	src/Parser.cpp  \
	src/RecognitionException.cpp  \
	src/String.cpp  \
	src/TokenBuffer.cpp  \
	src/Token.cpp  \
	src/TokenStreamBasicFilter.cpp  \
	src/TokenStreamHiddenTokenFilter.cpp  \
	src/TokenStreamSelector.cpp  \
	src/TreeParser.cpp
